# poule

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  Dockerfile  FAQ.md  INSTALLATION.md  MCP.md  README.md  SKILLS.md  example-status.md  pyproject.toml
.claude/: settings.json
claude/: feedback-standards.md
commands/: CLAUDE.md  check-compat.md  compress-proof.md  explain-error.md  explain-proof.md  formalize.md  migrate-rocq.md  proof-lint.md  proof-obligations.md  proof-repair.md  run-e2e.md  run-tasks.md  scaffold.md  textbook.md
doc/: MCP_TOOLS.md  SKILLS.md  claude-sdd.md  claude-skills.md  coq-tokenizer.md  coq-vocabulary.md  neural-network-search.md  neural-network-tactic-prediction.md  neural-network.md  neural-training-guide.md  poule-mcp.md  publishing-releases.md  reciprocal-rank-fusion.md  textbook-rag.md
docker/: entrypoint.sh  poule-mcp  validate-index.py
examples/: .arith.aux  README.md  arith.glob  arith.v  hammer_goals.v  hammer_test.v  test-results.md  test.v  test_fixture.db  test_fixture.dot
scripts/: build-indexes.sh  build-rag.sh  collapse-training-data.sh  download-education-model.sh  download-software-foundations.sh  evaluate-model.sh  extract-training-data.sh  index-and-extract-training-data.sh  merge-and-publish.sh  merge-indexes.sh  migrate-index.sh  optimize-rrf-params.sh  publish-indexes.sh  publish-model.sh  publish-release.sh  quantize-model.sh  quick-test-pipeline.sh  retry-loocv.py  run-full-training.py  train-final-model.py
specification/: CLAUDE.md  assumption-auditing.md  auto-trace-explanation.md  channel-fts.md  (+34 more)
(+535 files in other folders)
