[project]
name = "Poule"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "numpy",
    "alectryon",
    "onnxruntime>=1.16",
    "tokenizers>=0.15",
    "faiss-cpu>=1.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
]
train = [
    "torch>=2.0",
    "transformers>=4.30",
]
tune = [
    "optuna>=3.0",
]
mlx-train = [
    "mlx>=0.18",
    "transformers>=4.30",
]

[tool.pytest.ini_options]
testpaths = ["test/unit", "test/integration"]
asyncio_mode = "auto"
markers = [
    "requires_coq: test requires a real Coq/coq-lsp installation",
]

[project.scripts]
poule = "Poule.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Poule"]
